[package]
name = "static-file-server"
version = "0.1.0"
authors = ["rn7s2"]
edition = "2021"
description = "A simple static file server."
readme = "README.md"
repository = "https://github.com/rn7s2/static-file-server"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
clap = { version = "4.0.22", features = ["derive"] }
